k8s/overlays/prod/deployment/school-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:399600302704:certificate/39c09169-0ac4-43ee-9ba7-627391f0f45e
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: managex-school-service-production
                port:
                  number: 80
  tls:
    - hosts:
        - heycampus.app
